--- a/ClassMate/src/styles/Navbar.css
+++ b/ClassMate/src/styles/Navbar.css
@@ -20,7 +20,7 @@
     height: 40px;
   }
   
-  /* Menu */
+  
   .menu {
     display: flex;
     gap: 15px;
@@ -33,13 +33,13 @@
     padding: 10px;
   }
   
-  /* Icône burger (caché en grand écran) */
+ 
   .burger {
     display: none;
     cursor: pointer;
   }
   
-  /* Styles pour mobile */
+  /* Responsive design */
   @media (max-width: 768px) {
     .burger {
       display: block;
